--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ mobile/libisar.dylib
 mobile/openapi/test
 mobile/openapi/doc
 mobile/openapi/.openapi-generator/FILES
+mobile
 
 open-api/typescript-sdk/build
 mobile/android/fastlane/report.xml
